--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     wait, there is no Javascript! You should change that.
   </noscript>
   <div id="container"></div>
-  <script type="text/javascript" src="/lib/dropin_require.js"></script>
+  <script type="text/javascript" src="/lib/include-min.js"></script>
   <script type="text/javascript" src="/app.js"></script>
 </body>
 </html>
