--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Connect Four – programming challenge for Pfeffermint</title>
+  <script type="text/javascript" src="/lib/include.js"></script>
+  <script type="text/javascript" src="/app.js" data-module="app"></script>
 </head>
 <body>
   <noscript>
@@ -10,7 +12,5 @@
     wait, there is no Javascript! You should change that.
   </noscript>
   <div id="container"></div>
-  <script type="text/javascript" src="/lib/include-min.js"></script>
-  <script type="text/javascript" src="/app.js"></script>
 </body>
 </html>
