first steps towards rendering the game

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>Connect Four – programming challenge for Pfeffermint</title>
   <script type="text/javascript" src="/lib/include.js"></script>
   <script type="text/javascript" src="/app.js" data-module="app"></script>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <noscript>
     Thanks to Javascript, you can see a great little connect four game here. Oh
     wait, there is no Javascript! You should change that.
   </noscript>
-  <div id="container"></div>
 </body>
 </html>
