remove absolute paths

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Connect Four – programming challenge for Pfeffermint</title>
-  <script type="text/javascript" src="/lib/include.js"></script>
-  <script type="text/javascript" src="/app.js" data-module="app"></script>
-  <link rel="stylesheet" href="/style.css">
+  <script type="text/javascript" src="lib/include.js"></script>
+  <script type="text/javascript" src="app.js" data-module="app"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <noscript>
