--- a/test.html
+++ b/test.html
@@ -5,8 +5,8 @@
   <title>Connect Four – unconventional testsuite</title>
 </head>
 <body>
-  <script type="text/javascript" src="/lib/include-min.js"></script>
-  <script type="text/javascript" src="/lib/klud.js"></script>
+  <script type="text/javascript" src="lib/include-min.js"></script>
+  <script type="text/javascript" src="lib/klud.js"></script>
   <script type="text/javascript">
     include(["test.column", "test.board"], function(columnTest, boardTest) {
       columnTest.run()
